feat(user): implement find self endpoint
